<resources>
    <string name="app_name">RickAndMortyApp</string>
    <string name="title_activity_character_list">ActivityCharacterList</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="character_details_species_title">Species</string>
    <string name="character_details_gender_title">Gender</string>
    <string name="character_details_numberOfEpisodes_title">Number Of Episodes</string>
    <string name="character_details_activity_title">Character Details</string>
    <string name="character_details_status_title">Status</string>
    <string name="character_details_location_title">Location</string>
    <string name="character_details_origin_title">Origin</string>
    <string name="choose_character_instruction_text">Choose a character to learn more about them!</string>
    <string name="no_internet_access">No Internet Access</string>
    <string name="check_internet_and_retry_later">Please check your internet connection and try again later.</string>
    <string name="close_app">Close App</string>
    <string name="order_by">Order By:</string>
    <string name="name">Name</string>
    <string name="episodes">Episodes</string>
</resources>