<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/character_details_background"
    tools:context=".ui.CharacterListActivity"
    tools:theme="@style/CharacterListTheme">

    <androidx.cardview.widget.CardView
        android:id="@+id/portalCardView"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_marginBottom="24dp"
        app:cardCornerRadius="100dp"
        app:layout_constraintBottom_toTopOf="@+id/initialTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@mipmap/ic_portal_round" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@id/initialTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#3DDB83"
        android:foregroundGravity="center_horizontal"
        android:text="@string/choose_character_instruction_text"
        android:textAlignment="center"
        android:textColor="@color/textColorPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.734" />

    <EditText
        android:id="@+id/searchEditText"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:background="@drawable/item_border"
        android:gravity="center"
        android:hint="Search by name"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:textColor="@color/textColorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/initialTextView"
        app:layout_constraintVertical_bias="0.213" />

    <LinearLayout
        android:id="@id/characterDetailsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05">

        <Button
            android:id="@+id/clearSelectionButton"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_gravity="right"
            android:background="@drawable/item_border"
            android:text="Clear"
            android:textColor="@color/black"
            android:textSize="10dp" />

        <ImageView
            android:id="@+id/characterImage"
            android:layout_width="160dp"
            android:layout_height="145dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.035"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/characterNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:ellipsize="middle"
            android:gravity="center"
            android:text="Rick Sanchez"
            android:textColor="@color/textColorPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/characterImage" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/characterDetailsLayout">

            <LinearLayout
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/item_border"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/small_margin">

                <TextView
                    android:id="@+id/speciesTitleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/very_small_margin"
                    android:layout_marginVertical="@dimen/very_small_margin"
                    android:background="#41EA8B"
                    android:gravity="center"
                    android:text="@string/character_details_species_title" />

                <TextView
                    android:id="@+id/speciesValueTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/very_small_margin"
                    android:layout_marginVertical="@dimen/very_small_margin"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="Human" />

                <TextView
                    android:id="@+id/genderTitleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/very_small_margin"
                    android:layout_marginVertical="@dimen/very_small_margin"
                    android:background="#41EA8B"
                    android:gravity="center"
                    android:text="@string/character_details_gender_title" />

                <TextView
                    android:id="@+id/genderValueTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/very_small_margin"
                    android:layout_marginVertical="@dimen/very_small_margin"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="Male" />

                <TextView
                    android:id="@+id/statusTitleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/very_small_margin"
                    android:layout_marginVertical="@dimen/very_small_margin"
                    android:background="#41EA8B"
                    android:gravity="center"
                    android:text="@string/character_details_status_title" />

                <TextView
                    android:id="@+id/statusValueTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/very_small_margin"
                    android:layout_marginVertical="@dimen/very_small_margin"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="Unknown" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/item_border"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/small_margin">

                <TextView
                    android:id="@+id/originTitleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/very_small_margin"
                    android:layout_marginVertical="@dimen/very_small_margin"
                    android:background="#41EA8B"
                    android:gravity="center"
                    android:text="@string/character_details_origin_title" />

                <TextView
                    android:id="@+id/originValueTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/very_small_margin"
                    android:layout_marginVertical="@dimen/very_small_margin"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="Human" />

                <TextView
                    android:id="@+id/locationTitleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/very_small_margin"
                    android:layout_marginVertical="@dimen/very_small_margin"
                    android:background="#41EA8B"
                    android:gravity="center"
                    android:text="@string/character_details_location_title" />

                <TextView
                    android:id="@+id/locationValueTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/very_small_margin"
                    android:layout_marginVertical="@dimen/very_small_margin"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="Male" />

                <TextView
                    android:id="@+id/numOfEpsTitleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/very_small_margin"
                    android:layout_marginVertical="@dimen/very_small_margin"
                    android:background="#41EA8B"
                    android:gravity="center"
                    android:text="@string/character_details_numberOfEpisodes_title" />

                <TextView
                    android:id="@+id/numOfEpsValueTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/very_small_margin"
                    android:layout_marginVertical="@dimen/very_small_margin"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="2" />
            </LinearLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </LinearLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="wrap_content"
        android:layout_height="220dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.874">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/item_border"
            android:clipToPadding="false"
            android:contentDescription="Character List"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/item_character" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/orderByButtonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@drawable/item_border"
            android:gravity="center"
            android:text="@string/order_by"
            android:textStyle="bold" />

        <Button
            android:id="@+id/orderByNameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/medium_margin"
            android:background="@drawable/item_border"
            android:gravity="center"
            android:text="@string/name" />

        <Button
            android:id="@+id/orderByGenderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/medium_margin"
            android:background="@drawable/item_border"
            android:gravity="center"
            android:text="@string/character_details_gender_title" />

        <Button
            android:id="@+id/orderByEpisodesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/medium_margin"
            android:background="@drawable/item_border"
            android:gravity="center"
            android:text="@string/episodes" />
    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>